force-app/src/objects/fferpcore__AsyncAPISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the Async API Framework. A custom hierarchy setting maintained at the Org level. The asynchronous process will ignore any users or profiles that are overridden.</description>
    <fields>
        <fullName>fferpcore__DaysToKeepErrorJobRecords__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days to keep records for jobs that failed before automatically deleting them.</description>
        <inlineHelpText>Number of days to keep records for jobs that failed before automatically deleting them.</inlineHelpText>
        <label>Days to Keep Error Job Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__DaysToKeepProcessRunsAndLogs__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Number of days to keep Process Run and Log records before automatically deleting them.</description>
        <inlineHelpText>Number of days to keep Process Run and Log records before automatically deleting them.</inlineHelpText>
        <label>Days to Keep Process Run &amp; Logs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__DaysToKeepSuccessfulJobRecords__c</fullName>
        <defaultValue>7</defaultValue>
        <description>Number of days to keep records for jobs that succeded before automatically deleting them.</description>
        <inlineHelpText>Number of days to keep records for jobs that succeded before automatically deleting them.</inlineHelpText>
        <label>Days to Keep Success Job Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__DeadJobEnqueueDelayMinutes__c</fullName>
        <defaultValue>1</defaultValue>
        <description>For Certinia internal use only. The number of minutes to delay the enqueuing of the Dead Job Sweeper. (Default is 1, Minimum is 1) a zero value will be ignored</description>
        <inlineHelpText>For Certinia internal use only. The number of minutes to delay the enqueuing of the Dead Job Sweeper. (Default is 1, Minimum is 1) a zero value will be ignored</inlineHelpText>
        <label>Dead Job Sweeper Enqueue Delay Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsTestWithChain__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For Certinia internal use only. Set to true to enable tests to run with chained queueables.</description>
        <inlineHelpText>For Certinia internal use only. Set to true to enable tests to run with chained queueables.</inlineHelpText>
        <label>TEST ONLY: Is Test With Chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__LastJobRecordCleanupTime__c</fullName>
        <description>For Certinia internal use only. Time of last cleanup of Job Records.</description>
        <inlineHelpText>For Certinia internal use only. Time of last cleanup of Job Records.</inlineHelpText>
        <label>Job Record Cleanup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaxStalledJobChecks__c</fullName>
        <defaultValue>10</defaultValue>
        <description>For Certinia internal use only. The number of times a Blocked Job is checked by the Monitor job and failed to progress before it is deemed to have failed. (Default is 10, Minimum is 1) a zero value will be ignored)</description>
        <inlineHelpText>For Certinia internal use only. The number of times a Blocked Job is checked by the Monitor job and failed to progress before it is deemed to have failed. (Default is 10, Minimum is 1) a zero value will be ignored) Progress is defined as the number of dependencies found when it is examined by the Monitor job.</inlineHelpText>
        <label>Maximum Stalled Job Checks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaximumRetainedJobRecords__c</fullName>
        <defaultValue>100000</defaultValue>
        <description>Maximum number of completed Job Records that can be retained.</description>
        <inlineHelpText>For Certinia internal use only. Maximum number of completed Job Records that can be retained.</inlineHelpText>
        <label>Maximum completed Job Records to retain</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaximumRunningSystemJobs__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>For Certinia internal use only. The maximum number of running system jobs. This is used to the throttle the number of actively executing system jobs. User mode jobs are unaffected. A negative value removes the throttle.</description>
        <inlineHelpText>For Certinia internal use only. The maximum number of running system jobs. This is used to the throttle the number of actively executing system jobs. User mode jobs are unaffected. A negative value removes the throttle.</inlineHelpText>
        <label>Maximum Running System Jobs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MonitorEnqueueDelayMinutes__c</fullName>
        <defaultValue>3</defaultValue>
        <description>For Certinia internal use only. The number of minutes to delay the enquueing of the monitor job. (Default is 1, Minimum is 1) a zero value will be ignored)</description>
        <inlineHelpText>For Certinia internal use only. The number of minutes to delay the enquueing of the monitor job. (Default is 1, Minimum is 1) a zero value will be ignored)</inlineHelpText>
        <label>Monitor Enqueue Delay Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MonitorExecutionAttempts__c</fullName>
        <defaultValue>3</defaultValue>
        <description>For Certinia internal use only. The number of times the Monitor will be repeatedly enqueued where no jobs are found before retiring.</description>
        <inlineHelpText>For Certinia internal use only. The number of times the Monitor will be repeatedly enqueued where no jobs are found before retiring.</inlineHelpText>
        <label>Monitor Enqueue Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MonitorMaxJobsPerIteration__c</fullName>
        <description>For Certinia internal use only. The maximum number of pending jobs to be queried per iteration of the Monitor Job. A hard limit of 25000 records is enforced.</description>
        <inlineHelpText>For Certinia internal use only. The maximum number of pending jobs to be queried per iteration of the Monitor Job. A hard limit of 25000 records is enforced.</inlineHelpText>
        <label>Monitor Max Jobs per Iteration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__PendingJobIdleLimit__c</fullName>
        <defaultValue>5</defaultValue>
        <description>For Certinia internal use only. The number of minutes a job can sit in an idle state before it&apos;s picked up by the Job Monitor and re-enqueued (Default is 5, Minimum is 1) a zero value will be ignored</description>
        <inlineHelpText>For Certinia internal use only. The number of minutes a job can sit in an idle state before it&apos;s picked up by the Job Monitor and re-enqueued (Default is 5, Minimum is 1) a zero value will be ignored</inlineHelpText>
        <label>Pending Job Idle Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Async API Framework Settings</label>
</CustomObject>